Fix layout overflow

--- a/frontend/src/layouts/AlbumBreadcrumbLayout/AlbumBreadcrumbLayout.module.css
+++ b/frontend/src/layouts/AlbumBreadcrumbLayout/AlbumBreadcrumbLayout.module.css
@@ -1,8 +1,3 @@
-.outlet-container {
-  overflow-y: scroll;
-  padding: 2.3rem 2rem;
-}
-
 .breadcrumb {
   margin-bottom: 1rem;
 }
