--- a/frontend/src/layouts/NavbarLayout/NavbarLayout.module.css
+++ b/frontend/src/layouts/NavbarLayout/NavbarLayout.module.css
@@ -1,3 +1,4 @@
 .outlet-container {
   height: calc(100vh - var(--navbarHeight));
+  width: 100vw;
 }
