--- a/frontend/src/layouts/SidebarLayout/SidebarLayout.module.css
+++ b/frontend/src/layouts/SidebarLayout/SidebarLayout.module.css
@@ -1,3 +1,8 @@
 .layout-container {
   display: flex;
 }
+
+.outlet-container {
+  overflow-y: scroll;
+  padding: 2.3rem 2rem;
+}
